feat(core): refactor generate method to avoid memory overload

--- a/src/DocBundle/Resources/config/routing/version.yml
+++ b/src/DocBundle/Resources/config/routing/version.yml
@@ -17,3 +17,8 @@ version_export_params:
     path:     /{id}/export
     defaults: { _controller: "DocBundle:Version:exportHarchiveParams" }
     methods:  POST
+
+parametrage_show_archive_pdf:
+    path:     /{id}/archivepdf
+    defaults: { _controller: "DocBundle:Version:showArchivePdf" }
+    methods:  GET
