fix(routing): add requirements on route params (pag)

--- a/src/DocBundle/Resources/config/routing/parametrage.yml
+++ b/src/DocBundle/Resources/config/routing/parametrage.yml
@@ -2,6 +2,8 @@ parametrage_index:
     path:     /{page}
     defaults: { _controller: "DocBundle:Parametrage:index", page: 1 }
     methods:  GET
+    requirements:
+        page: \d+
 
 parametrage_show:
     path:     /{id}/show
