feat(core): add liasse composition

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "require": {
         "php": ">=5.5.9",
-        "symfony/symfony": "3.0.1",
+        "symfony/symfony": "3.0.3",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
@@ -23,7 +23,9 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "friendsofsymfony/user-bundle": "dev-master",
         "symfony/filesystem": "^3.0",
-        "symfony/assetic-bundle": "^2.7"
+        "symfony/assetic-bundle": "^2.7",
+        "iio/libmergepdf": "~3.0",
+        "symfony/process": "3.0.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
