--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,8 +7,8 @@ security:
     role_hierarchy:
         ROLE_INVITE:      ROLE_USER
         ROLE_AGENT:       ROLE_INVITE
-        ROLE_ADMIN:       [ROLE_USER, ROLE_INVITE]
-        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_INVITE, ROLE_ADMIN]
+        ROLE_ADMIN:       [ROLE_USER, ROLE_INVITE, ROLE_AGENT]
+        ROLE_SUPER_ADMIN: [ROLE_AGENT, ROLE_USER, ROLE_INVITE, ROLE_ADMIN]
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
