--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,6 @@ parameters:
 #    parameter_name: value
 
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    param_service:
+        class: DocBundle\Services\ParamService
+        arguments: ["@doctrine.orm.entity_manager"]
